<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/title_result"
        android:fontFamily="serif-monospace"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/baseline_done_all_24"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/tvResultNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/result_name"
        android:fontFamily="serif-monospace"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvResultGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Gender: %1$s"
        android:fontFamily="serif-monospace"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvResultEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/result_email"
        android:fontFamily="serif-monospace"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvResultPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/result_phone"
        android:fontFamily="serif-monospace"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvResultSeminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/result_seminar"
        android:fontFamily="serif-monospace"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/btn_back"
        android:fontFamily="serif-monospace"
        android:textColor="@color/white"
        android:textStyle="bold"/>


</LinearLayout>